<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameter_sf_Range"></TextView>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></Switch>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/parameter_sf_Adjust"></TextView>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameter_sf_Up"></TextView>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></EditText>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parameter_sf_Down"></TextView>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></EditText>

</LinearLayout>